<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



        <ImageView
            android:id="@+id/dialog_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0057C3"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/ic_filter_list_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/dialog_filter_date"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/dialog_filter_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filtrer_par_date"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/dialogue_filter_room"
            app:layout_constraintTop_toBottomOf="@id/dialog_image" />

        <TextView
            android:id="@+id/dialogue_filter_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:text="@string/filtrer_par_salle"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/dialog_filter_date" />

</LinearLayout>