<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reunion_color"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/radius"

        android:contentDescription="@string/fragment_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/reunion_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reunion_subject_exemple"
        android:textStyle="bold"
        android:textSize="17sp"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@id/reunion_color"
        app:layout_constraintRight_toLeftOf="@+id/reunion_delete"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/reunion_color"
        />

    <TextView
        android:id="@+id/reunion_participants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:singleLine="true"
        android:text="@string/reunion_mail_exemple"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/reunion_color"
        app:layout_constraintRight_toLeftOf="@id/reunion_delete"
        app:layout_constraintTop_toBottomOf="@id/reunion_subject"
        />

    <ImageButton
        android:id="@+id/reunion_delete"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:background="@null"
        android:contentDescription="@string/fragment_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>